--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,7 @@ migrate_working_dir/
 *.iws
 .idea/
 lib/src/paypal_service.dart
-
-lib/core/utils/api_keys.dart
+lib/shared/services/private
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
